Added re-did the python notebook

--- a/code/sliderule_dsi_inferential_statistics_exercise_2.ipynb
+++ b/code/sliderule_dsi_inferential_statistics_exercise_2.ipynb
@@ -381,8 +381,8 @@
     "In the dataset provided, each row represents a resume. The 'race' column has two values, 'b' and 'w', indicating black-sounding and white-sounding. The column 'call' has two values, 1 and 0, indicating whether the resume received a call( success)  from employers or not(fail). The callbacks are categorical. Hence, we would use proportions.  Yes, The Central Limit Theorem does apply. The sampling distribution of propotions is very nearly normal for N >=30 even when the population is non-normal. Therefore a z-test is appropriate \n",
     "\n",
     "Here are the hypotheses\n",
-    "#### H0 : Race does not have any impact on the callbacks for resume.( claim )\n",
-    "#### Ha : Race does have significant impact on callbacks for resume. "
+    "#### H<sub>0</sub> : Race does not have any impact on the callbacks for resume( claim )\n",
+    "#### H<sub>a </sub>: Race does have significant impact on callbacks for resume"
    ]
   },
   {
@@ -564,12 +564,12 @@
    "source": [
     "The z statistic would then be caclulated as follows\n",
     "\n",
-    "z =  X - u / SE"
+    "z =  <hat>P</hat> - u / SE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -581,11 +581,11 @@
     }
    ],
    "source": [
-    "X = prop_w - prop_b\n",
+    "P = prop_w - prop_b\n",
     "u = 0 ## Under null hypothesis the difference is 0\n",
     "SE = se_both\n",
     "\n",
-    "z_stat = (X - u) / (SE)\n",
+    "z_stat = (P - u) / (SE)\n",
     "\n",
     "print(\"The z-stat  is {} \".format(z_stat))"
    ]
