Fixed  the shape cell

--- a/code/sliderule_dsi_inferential_statistics_exercise_2.ipynb
+++ b/code/sliderule_dsi_inferential_statistics_exercise_2.ipynb
@@ -290,7 +290,7 @@
     }
    ],
    "source": [
-    "(rows, cols) = data.shape\n",
+    "(rows, cols) = df.shape\n",
     "print(\"There are a total of {} observations in the data set \".format(rows))"
    ]
   },
